rm auto_update_option

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -33,7 +33,7 @@ crypto_win::tls_1_0_client: true
 crypto_win::sha: true
 
 # all things WSUS client
-wsus_client::auto_update_option: 'NotifyOnly'
+#wsus_client::auto_update_option: 'NotifyOnly'
 wsus_client::detection_frequency_hours: 1
 wsus_client::enable_status_server: true
 wsus_client::no_auto_reboot_with_logged_on_users: true
