testing a plan looking up data in hiera

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -57,3 +57,8 @@ hierarchy:
 
   - name: "Common data"
     path: "common.yaml"
+
+plan_hierarchy:
+  - name: "Common plan data"
+    datadir: data/plans
+    path: "common.yaml"
