add plan_hierachy back to mod

--- a/site/jpi/hiera.yaml
+++ b/site/jpi/hiera.yaml
@@ -13,6 +13,6 @@ hierarchy:
   - name: "Common data"
     path: "common.yaml"
 
-#plan_hierarchy:
-#  - name: "Static data"
-#    path: "static.yaml"
+plan_hierarchy:
+  - name: "Static data"
+    path: "static.yaml"
